Update CSS to prevent overflow. (#104)
* Update CSS to prevent overflow.

* Update common.css

* title smalle

---------

--- a/src/main/resources/static/stylesheets/common.css
+++ b/src/main/resources/static/stylesheets/common.css
@@ -31,7 +31,7 @@ header > * {
 
 #page-title {
     text-align: center;
-    font-size: 6vw;
+    font-size: 5vw;
     margin-left: 10%;
 }
 
